--- a/index.modulo.css
+++ b/index.modulo.css
@@ -64,3 +64,9 @@ footer {
 footer p a {
   text-decoration: none; color: inherit;
 }
+
+@media only screen and (max-width: 800px) {
+  main {
+    width: auto;
+  }
+}
