--- a/modulo-d/modulo-d-exc-01/modulo-d-exc-01.css
+++ b/modulo-d/modulo-d-exc-01/modulo-d-exc-01.css
@@ -1,10 +1,6 @@
 body {
   background-color: rgb(4, 174, 216);
-  font: medium 15pt Arial;
-}
-
-input[type=number] {
-  -moz-appearance:textfield;
+  font: normal 12pt Arial;
 }
 
 header {
@@ -53,7 +49,8 @@ img#imgHorario {
   text-decoration: none;
 }
 
-
-
-
-
+@media only screen and (max-width: 800px) {
+  main {
+    width: auto;
+  }
+}
